--- a/spring-jpa-ecom/src/main/resources/application.properties
+++ b/spring-jpa-ecom/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=spring-jpa-ecom
+server.port=8083
 #datatbase configure[Datasource]
 spring.datasource.url=jdbc:mysql://localhost:3306/live_batch
 spring.datasource.username=root
