--- a/start-learn-back/src/main/resources/application.properties
+++ b/start-learn-back/src/main/resources/application.properties
@@ -15,8 +15,8 @@ spring.jpa.hibernate.ddl-auto=update
 #sql ko format kar dega
 spring.jpa.properties.hibernate.format_sql=true
 
-spring.servlet.multipart.max-file-size=50MB
-spring.servlet.multipart.max-request-size=50MB
+spring.servlet.multipart.max-file-size=500MB
+spring.servlet.multipart.max-request-size=500MB
 
 #spring.security.user.name=abc
 #spring.security.user.password=abc
@@ -25,3 +25,5 @@ logging.level.org.springframework.security=DEBUG
 
 springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/doc.html
+
+video.upload.path=uploads/videos
