--- a/oauth-front/package.json
+++ b/oauth-front/package.json
@@ -13,7 +13,8 @@
     "axios": "^1.7.7",
     "keycloak-js": "^25.0.5",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
