elearn project updated

--- a/start-learn-back/src/main/resources/application.properties
+++ b/start-learn-back/src/main/resources/application.properties
@@ -27,3 +27,6 @@ springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/doc.html
 
 video.upload.path=uploads/videos
+
+razorpay.key=rzp_test_azfxsO6GTTCccO
+razorpay.secret=AdZd6W52ZxYEj7XaZ5vBHFTD
