--- a/start-learn-back/pom.xml
+++ b/start-learn-back/pom.xml
@@ -31,6 +31,11 @@
 	</properties>
 	<dependencies>
 
+		<dependency>
+			<groupId>com.razorpay</groupId>
+			<artifactId>razorpay-java</artifactId>
+			<version>1.4.8</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
